# High-Performance-API-Security-Gateway

./: .dockerignore  .env.example  .env.production  .gitignore  BUILD-AND-RUN.md  CMakeLists.txt  DELIVERABLES.md  DOCKER-DEPLOYMENT.md  DOCKER-SUCCESS.md  Dockerfile  FEATURES.md  IMPLEMENTATION-SUMMARY.md  LICENSE  PHASE2-IMPLEMENTATION.md  PHASE3-IMPLEMENTATION.md  PHASE4-IMPLEMENTATION.md  PHASE5-IMPLEMENTATION.md  PRODUCTION-READINESS.md  PRODUCTION.md  PROJECT_SUMMARY.md  QUICKSTART-FEATURES.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  UI-IMPLEMENTATION-SUMMARY.md  UI-QUICKSTART.md  api-gateway-ui-build-prompt.md  build.sh  docker-compose.production.yml  docker-compose.yml  quick-test.sh  run.sh  start-gateway.sh  stop-gateway.sh  test-docker-deployment.sh  test-gateway.sh  test-ui.sh  test.sh
benchmarks/: benchmark_results.md  load_test.sh  post_login.lua
config/: gateway.json  gateway.production.json  routes.docker.json  routes.json  routes.production.json
docs/: api-documentation.md  architecture.md  deployment-guide.md
mock-services/: Dockerfile  auth-service.js  package-lock.json  package.json  payment-service.js  user-service.js
monitoring/: alertmanager.yml  alerts.yml  loki.yml  prometheus-production.yml  prometheus.yml  promtail.yml
monitoring/grafana/dashboards/: dashboard.yml  gateway-dashboard.json  security-dashboard.json
scripts/: build-and-run.sh  deploy-production.sh  generate-dev-certs.sh  security-check.sh  setup-letsencrypt.sh
src/: main.cpp
src/admin/: AdminAPI.cpp  AdminAPI.h
src/auth/: JWTManager.cpp  JWTManager.h
src/cache/: RedisCache.cpp  RedisCache.h
src/config/: ConfigManager.cpp  ConfigManager.h
src/logging/: Logger.cpp  Logger.h
src/metrics/: MetricsCollector.cpp  MetricsCollector.h  SimpleMetrics.cpp  SimpleMetrics.h
src/rate_limiter/: RateLimiter.cpp  RateLimiter.h  RedisRateLimiter.cpp  RedisRateLimiter.h
src/router/: ProxyManager.cpp  ProxyManager.h  Router.cpp  Router.h  WebSocketProxy.cpp  WebSocketProxy.h
src/security/: SecurityValidator.cpp  SecurityValidator.h  TLSManager.cpp  TLSManager.h
src/server/: HttpServer.cpp  HttpServer.h  Request.h  Response.h
tests/: test_http_parser.cpp  test_jwt.cpp  test_rate_limiter.cpp  test_router.cpp  test_security.cpp
ui/: .env.local.example  Dockerfile  README.md  mock-gateway.js  next.config.mjs  package-lock.json  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/cache/: page.tsx
ui/src/app/logs/: page.tsx
ui/src/app/ratelimit/: page.tsx
ui/src/app/routes/: page.tsx
ui/src/app/security/: page.tsx
ui/src/app/settings/: page.tsx
ui/src/components/cache/: CacheClearPanel.tsx  CacheConfigPanel.tsx  CacheStatsOverview.tsx
ui/src/components/dashboard/: BackendHealthChart.tsx  MetricsCard.tsx  MetricsOverview.tsx  RequestRateChart.tsx  StatusCodeChart.tsx
ui/src/components/logs/: RequestLogsViewer.tsx
ui/src/components/nav/: MobileNav.tsx
ui/src/components/providers/: QueryProvider.tsx
ui/src/components/ratelimit/: RateLimitConfigPanel.tsx  RateLimitResetPanel.tsx
ui/src/components/routes/: RouteForm.tsx  RouteTable.tsx
ui/src/components/security/: APIKeyManager.tsx  IPFilterList.tsx  JWTSettings.tsx
ui/src/components/settings/: ConfigEditor.tsx
ui/src/lib/: prometheus.ts  utils.ts
ui/src/types/: gateway.ts
(+25 files in other folders)
